--- a/style.css
+++ b/style.css
@@ -2,10 +2,20 @@ body {
     background-color: #010101;
 }
 
+header {
+    position: relative;
+    top: 50px;
+    left: 700px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .title {
     text-decoration: none;
     color: white;
-    align-items: center;
     width: fit-content;
     color: white;
     border: 50px;
@@ -21,6 +31,7 @@ body {
 }
 
 nav {
+    width: max-content;
     margin-top: 50px;
     margin-left: 400px;
     margin-right: 400px;
