--- a/style.css
+++ b/style.css
@@ -1,33 +1,30 @@
 body {
-    background-color: #010101;
+    background-color: white;
 }
 
 header {
     position: relative;
-    top: 50px;
-    left: 700px;
 }
 
 a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 .title {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
-    color: white;
-    width: fit-content;
-    color: white;
+    color: black;
+    width: 50%;
+    color: black;
     border: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 50px;  
-    padding-right: 50px;
+    padding: 1em;
+    
 }
 
 .title:hover {    
-    background-color: blue;
-    color: white;      
+    background-color: orange;
+    color: black;      
 }
 
 nav {
@@ -45,9 +42,10 @@ nav {
 }*/
 
 .menu {
+    font-size: 28px;
+    display: inline-block;
     height: fit-content;
     width: fit-content;
-    background-color: blue;
     border: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -56,7 +54,8 @@ nav {
 }
 
 .menu:hover {
-    background-color: green;
+    background-color: orange;
+    font-weight: bold;
 }
 
 article {
@@ -68,13 +67,13 @@ article {
 
 
 footer {
-    position: absolute;
-    bottom: 10px;
+    position: relative;
+    bottom: 0px;
     left: 720px;
 }
 
 .principal {
-    color: white;
+    color: black;
     margin-bottom: 50px;
     width: fit-content;
     padding-top: 25px;
@@ -85,7 +84,7 @@ footer {
 
 .principal:hover {
     background-color: green;
-    color: white;    
+    color: black;    
 }
 
 p {
@@ -93,7 +92,7 @@ p {
 }
 
 .rodape {
-    color: white;
+    color: black;
 }
 
 .rodape:hover {
